--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danishin/capacitor-native-push-notifications.git"
+    "url": "git+https://github.com/cathypark/push-notifications.git"
   },
   "keywords": [
     "capacitor",
@@ -43,6 +43,7 @@
     "publish:cocoapod": "pod trunk push ./CapacitorPushNotifications.podspec --allow-warnings"
   },
   "devDependencies": {
+    "@types/node": "14.18.34",
     "@capacitor/android": "^4.0.0",
     "@capacitor/cli": "^4.0.0",
     "@capacitor/core": "^4.0.0",
